--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body class="min-h-screen bg-gradient-to-br from-[#F9FAFB] to-[#D2D6DB] flex justify-center">
     <div class="flex flex-col bg-white w-[340px] mt-[200px] rounded p-6 rounded-md mx-0 my-auto gap-4">
       <div class="flex gap-4">
-        <img src="/img/profile-thumbnail.png" alt="Profile Picture" class="h-12 w-12">
+        <img src="img/profile-thumbnail.png" alt="Profile Picture" class="h-12 w-12">
         <div>
           <div class="font-semibold">
             Sarah Dole
