fix: shadow and name size

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <link rel="icon" href="img/favicon.ico" sizes="any" />
   </head>
   <body class="min-h-screen bg-gradient-to-br from-[#F9FAFB] to-[#D2D6DB] flex justify-center">
-    <div class="flex flex-col bg-white w-[340px] mt-[200px] rounded p-6 rounded-md mx-0 my-auto gap-4">
+    <div class="flex flex-col bg-white w-[340px] mt-[200px] rounded p-6 rounded-md mx-0 my-auto gap-4 shadow-md">
       <div class="flex gap-4">
         <img src="img/profile-thumbnail.png" alt="Profile Picture" class="h-12 w-12">
         <div>
-          <div class="font-semibold">
+          <div class="font-semibold text-lg">
             Sarah Dole
           </div>
           <div class="text-sm text-neutral-600">
